--- a/aclap/src/app/components/module-shared/display/displayer/displayer.component.tns.scss
+++ b/aclap/src/app/components/module-shared/display/displayer/displayer.component.tns.scss
@@ -1,1 +1,31 @@
-/* Add mobile styles for the component here.  */
+$jumbo-color: #23AEE5;
+$button-color: #Ef6423;
+$lime-color: #FAB521;
+$nav-color:#1c81a9;
+$gray-dark: #596668;
+$l-grey: #d3d8d8;
+
+.cardStyle {
+    background-color: #fff;
+    color: #fff;
+}
+
+.text{
+    font-size: 12;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+.title-text{
+    font-size: 24;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+.subtitle-text{
+    font-size: 18;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
