Mejoras en UI de Guias Didacticas y primera version de Login en NS

--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -42,7 +42,7 @@
 
       <StackLayout class="sidedrawer-footer">
         <StackLayout orientation="horizontal" width="245" height="100">
-          <Label text="Ingresar" horizontalAlignment="left" color="white"></Label>
+          <Label text="Ingresar" horizontalAlignment="left" color="white" (tap)="navigateToLogin()"></Label>
           <Label text="       " horizontalAlignment="center"></Label>
           <Label text="Ser educador" horizontalAlignment="right" color="white"></Label>
       </StackLayout>
