--- a/aclap/src/app/components/profile-shared/profile/profile.component.scss
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.scss
@@ -3,7 +3,7 @@
 .jumbotron{
     max-height: fit-content;
 
-    background-color: app.$green-color;
+    background-color: app.$nav-color;
 
     img{
         max-height: 100px;
