--- a/aclap/src/app/components/profile-shared/implementable-list/implementable-list.component.scss
+++ b/aclap/src/app/components/profile-shared/implementable-list/implementable-list.component.scss
@@ -2,7 +2,7 @@
 
 li{
     margin-top: 10px;
-    background-color: app.$green-color; 
+    background-color: app.$nav-color; 
     color: white;
     transition: 0.2s;
 }
