--- a/aclap/src/app/components/shared/login/login.component.html
+++ b/aclap/src/app/components/shared/login/login.component.html
@@ -1,26 +1,38 @@
-<div class="modal-body mx-0 my-0 px-0 py-0">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 d-none d-md-block align-items-center d-flex flex-column left-col">
-                
+<div class="container-fluid">
+    <div id="main-content" class="row d-flex align-items-center justify-content-center">
+        <div class="col-12 col-md-4 ">
+            <div class="row  d-flex justify-content-center">
+                <div class="col-2">
+                    <img class="img-fluid" src="src=../../../assets/logo.png" alt="EDUCA-ACLAP">
+                </div>
+                <div class="col-5">
+                    <h2>EDUCA-ACLAP</h2>
+                </div>
             </div>
-            <div class="col-12 col-md-4">
-                <h2 class="my-5 text-center">Iniciar Sesión</h2>
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                    <div class="form-group">
-                        <label for="username">E-mail</label>
-                        <input type="text" formControlName="username" class="form-control"/>
+            <div id="log-card" class="my-5 card shadow-lg">
+                <h2 class="mt-5 card-title text-center">Iniciar Sesión</h2>
+                <div class="mb-5 card-body">
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                        <div class="form-group">
+                            <label for="username">E-mail</label>
+                            <input type="text" formControlName="username" class="form-control"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" formControlName="password" class="form-control"/>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-white">
+                                Login
+                            </button>
+                        </div>
+                    </form>
+                    <div class="row">
+                        <div class="col">
+                            <span>Olvidó su contraseña? <a href=""> Presione aquí </a></span>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="password">Contraseña</label>
-                        <input type="password" formControlName="password" class="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary">
-                            Login
-                        </button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
