--- a/aclap/src/app/components/shared/header/header.component.scss
+++ b/aclap/src/app/components/shared/header/header.component.scss
@@ -4,3 +4,8 @@
 .navbar{
     background-color: app.$nav-color;
 }
+
+.btn-accend{
+    background-color: app.$button-color;
+    color: app.$nav-color;
+}
