--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -1,34 +1,3 @@
-<!--
-<div>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-ms-12 col-md-4 d-flex justify-content-center">
-                    <img src="../../../assets/logo.png" style="height: 200px">
-                </div>
-                <div class="col-sm-12 col-md-8 justify-content-center">
-                    <div class="row">
-                        <h1>Bienvenido a la Plataforma de Educación Ambiental</h1>
-                    </div>
-                    <div class="row justify-content-center">
-                        <button class="btn btn-goto btn-lg" [routerLink]="['/modulos']" >VER MÓDULOS</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>Próximos Eventos</h1>
-            </div>
-        </div>
-        <div class="row row-content d-flex justify-content-center">
-            <app-module-card-list></app-module-card-list>
-        </div>
-    </div>
-</div>
--->
 
 <div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://images.unsplash.com/photo-1604390254113-b1b9e87bdf11?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=1280)'}">
     <div class="d-none d-xl-block" style="height: 500px">
@@ -97,7 +66,7 @@
 
     <div class="row" style="margin-bottom: 50px;">
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex justify-content-center">
+            <div class="card h-100 button d-flex justify-content-center" [routerLink]="['/persona-educadora']">
                 <h2 class="my-auto text-center">¿Qué significa ser una persona educadora?</h2>
             </div>
         </div>
