Add/delete Questions v0.9

--- a/aclap/src/app/components/app.component.scss
+++ b/aclap/src/app/components/app.component.scss
@@ -28,6 +28,7 @@ $l-grey: #d3d8d8;
 .button{
     background-color: $nav-color;
 
+    color: white;
     h2{
         color: $l-grey;
     }
@@ -57,4 +58,9 @@ $l-grey: #d3d8d8;
 .fill { 
     min-height: 100%;
     height: 100%;
+}
+
+.btn-accend{
+    background-color: $button-color;
+    color: white;
 }
