--- a/aclap/src/app/components/module-shared/create-module/create-module.component.html
+++ b/aclap/src/app/components/module-shared/create-module/create-module.component.html
@@ -18,6 +18,11 @@
             <!-- LEFT ROW  -->
             <div class="container">
                 <div class="row">
+                    <div class="col">
+                        <app-edit-questions [questions]="questions" ></app-edit-questions>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-12 col-md-12">
                         <app-edit-displayer [sections]=sections></app-edit-displayer>
                     </div>
