--- a/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
@@ -1,1 +1,70 @@
-<p>edit-questions works!</p>
+<h3>Agregar/Eliminar preguntas</h3>
+<div class="container">
+    <div class="row">
+        <form [formGroup]="form">
+            <div class="row">
+                <div class="col-2">
+                    <label for="question" class="col-form-label"> Pregunta </label>
+                </div>
+                <div class="form-group col-6">
+                    <textarea class="form-control" type="text" formControlName="question" [ngModel]="tempQuestion.question" rows="2"> </textarea>
+                </div>
+                <div class="col-4">
+                    <span class="btn btn-accend" (click)="addQuestion()" >
+                        Agregar
+                    </span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <div class="col-12">Muy bajo</div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" formControlName="v_low" rows="4" [ngModel]="options[0]"></textarea>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="col-12">Bajo</div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" formControlName="low" rows="4" [ngModel]="options[1]" ></textarea>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="col-12">Medio</div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" formControlName="average" rows="4" [ngModel]="options[2]" ></textarea>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="col-12">Alto</div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" formControlName="high" rows="4" [ngModel]="options[3]"></textarea>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="col-12">Muy alto</div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" formControlName="v_high" rows="4" [ngModel]="options[4]"></textarea>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <table class="table">
+            <thead>
+                <th scope="col">#</th>
+                <th scope="col">Preguntas</th>
+                <th scope="col"></th>
+            </thead>
+            <tbody>
+                <tr *ngFor="let q of questions; index as i">
+                    <th scope="row">{{i + 1}}</th>
+                    <td>{{q.question}}</td>
+                    <td> 
+                        <span class="btn btn-danger" (click)="questions.splice(i,1)"> Eliminar </span> 
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
