--- a/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
@@ -15,6 +15,11 @@
         <div class="col-12 col-lg-7">
             <!-- LEFT ROW  -->
             <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <app-edit-questions [questions]="questions" ></app-edit-questions>
+                    </div>
+                </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-10">
                         <app-edit-displayer [sections]=sections [imageProxy]="imageProxy"></app-edit-displayer>
