--- a/aclap/src/app/components/module-shared/edit/edit-image/edit-image.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-image/edit-image.component.html
@@ -17,16 +17,18 @@
             <input type="file" formControlName="url" class="form-control" (change)="onFileSelected($event)" [(ngModel)]="image.url"/>
         </div>
     </div>
-    <div class="form-group row">
-        <label for="footing" class="col-xl-2 col-form-label">Descripción de la Imagen</label>
-        <div class="col-xl-10">
-            <input formControlName=footing class="form-control"  [(ngModel)]="image.footing"/>
+    <div *ngIf="!noMetadata">
+        <div class="form-group row">
+            <label for="footing" class="col-xl-2 col-form-label">Descripción de la Imagen</label>
+            <div class="col-xl-10">
+                <input formControlName=footing class="form-control"  [(ngModel)]="image.footing"/>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="reference" class="col-xl-2 col-form-label">Fuente de la imagen:</label>
-        <div class="col-xl-10">
-            <input formControlName=reference class="form-control" [(ngModel)]="image.reference"/>
+        <div class="form-group row">
+            <label for="reference" class="col-xl-2 col-form-label">Fuente de la imagen:</label>
+            <div class="col-xl-10">
+                <input formControlName=reference class="form-control" [(ngModel)]="image.reference"/>
+            </div>
         </div>
     </div>
 </form>
