--- a/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
@@ -6,44 +6,44 @@
                 <div class="col-2">
                     <label for="question" class="col-form-label"> Pregunta </label>
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-8">
                     <textarea class="form-control" type="text" formControlName="question" [ngModel]="tempQuestion.question" rows="2"> </textarea>
                 </div>
-                <div class="col-4">
+                <div class="col-2">
                     <span class="btn btn-accend" (click)="addQuestion()" >
                         Agregar
                     </span>
                 </div>
             </div>
-            <div class="row">
+            <div class="row offset-1">
                 <div class="col-2">
                     <div class="col-12">Muy bajo</div>
                     <div class="form-group col-12">
-                        <textarea class="form-control" formControlName="v_low" rows="4" [ngModel]="options[0]"></textarea>
+                        <textarea class="form-control" formControlName="v_low" rows="4" [(ngModel)]="options[0]"></textarea>
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="col-12">Bajo</div>
                     <div class="form-group col-12">
-                        <textarea class="form-control" formControlName="low" rows="4" [ngModel]="options[1]" ></textarea>
+                        <textarea class="form-control" formControlName="low" rows="4" [(ngModel)]="options[1]" ></textarea>
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="col-12">Medio</div>
                     <div class="form-group col-12">
-                        <textarea class="form-control" formControlName="average" rows="4" [ngModel]="options[2]" ></textarea>
+                        <textarea class="form-control" formControlName="average" rows="4" [(ngModel)]="options[2]" ></textarea>
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="col-12">Alto</div>
                     <div class="form-group col-12">
-                        <textarea class="form-control" formControlName="high" rows="4" [ngModel]="options[3]"></textarea>
+                        <textarea class="form-control" formControlName="high" rows="4" [(ngModel)]="options[3]"></textarea>
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="col-12">Muy alto</div>
                     <div class="form-group col-12">
-                        <textarea class="form-control" formControlName="v_high" rows="4" [ngModel]="options[4]"></textarea>
+                        <textarea class="form-control" formControlName="v_high" rows="4" [(ngModel)]="options[4]"></textarea>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <tbody>
                 <tr *ngFor="let q of questions; index as i">
                     <th scope="row">{{i + 1}}</th>
-                    <td>{{q.question}}</td>
+                    <td>{{q.question}}: ({{q.options[1]}},{{q.options[2]}},{{q.options[3]}},{{q.options[4]}},{{q.options[5]}})</td>
                     <td> 
                         <span class="btn btn-danger" (click)="questions.splice(i,1)"> Eliminar </span> 
                     </td>
