--- a/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
@@ -15,8 +15,13 @@
         <div class="col-12 col-lg-7">
             <!-- LEFT ROW  -->
             <div class="container">
-                <div class="row">
-                    <div class="col">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-xl-10">
+                        <app-edit-files [files]="files" ></app-edit-files>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-xl-10">
                         <app-edit-questions [questions]="questions" ></app-edit-questions>
                     </div>
                 </div>
@@ -55,7 +60,9 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]=moduleImage [bannerImage]=bannerImage></app-edit-module-info>
+                    <div class="col-12">
+                        <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]="moduleImage" [bannerImage]="bannerImage"></app-edit-module-info>
+                    </div>
                 </div>
             </div>
         </div>
