--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -66,17 +66,17 @@
 
     <div class="row" style="margin-bottom: 50px;">
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex justify-content-center" [routerLink]="['/persona-educadora']">
+            <div class="card h-100 button clickable d-flex justify-content-center" [routerLink]="['/persona-educadora']">
                 <h2 class="my-auto text-center">¿Qué significa ser una persona educadora?</h2>
             </div>
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex justify-content-center" [routerLink]="['/modulos']">
+            <div class="card h-100 button d-flex clickable justify-content-center" [routerLink]="['/modulos']">
                 <h2 class="my-auto text-center">Módulos educativos</h2>
             </div>
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex justify-content-center">
+            <div class="card h-100 button d-flex clickable justify-content-center">
                 <h2 class="my-auto text-center">Eventos</h2>
             </div>
         </div>
