--- a/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
@@ -1,4 +1,4 @@
-<h3>Agregar/Eliminar preguntas</h3>
+<h2 class="card-header">Agregar/Eliminar preguntas</h2>
 <div class="container">
     <div class="row">
         <form [formGroup]="form">
