--- a/aclap/src/app/components/module-shared/modules/modules.component.scss
+++ b/aclap/src/app/components/module-shared/modules/modules.component.scss
@@ -1,11 +1,6 @@
 @use '../../app.component.scss';
 
-.clickable{
+.btn{
     background-color: app.$nav-color;
-    transition: 300ms;
-    color: whitesmoke;
-}
-
-.clickable:hover{
-    background-color: app.$button-color;
+    color: white;
 }
