--- a/aclap/src/app/components/module-shared/module-card/module-card.component.html
+++ b/aclap/src/app/components/module-shared/module-card/module-card.component.html
@@ -3,8 +3,8 @@
         <img [src]="module.imageUrl" class="img-fluid rounded-circle" [alt]="module.name"> 
     </div>
     <div class="row">
-        <div class="col">
-            <p class="text-center">{{ module.name }}</p>
+        <div class="col d-flex justify-content-center">
+            <a [style.font-size]="'20px'">{{ module.name }}</a>
         </div>
     </div>
 </div>
