Module Image bug fixed

--- a/aclap/src/app/components/module-shared/create-module/create-module.component.html
+++ b/aclap/src/app/components/module-shared/create-module/create-module.component.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <app-edit-module-info class="mt-4" [module]=module></app-edit-module-info>
+                    <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]="moduleImage" [bannerImage]="bannerImage"></app-edit-module-info>
                 </div>
             </div>
         </div>
