Image submition synchronization

--- a/aclap/src/app/components/module-shared/edit/edit-files/edit-files.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-files/edit-files.component.html
@@ -16,6 +16,17 @@
         </p>
         <app-progress [progress]="file?.progress"></app-progress>
       </div>
-      <span class="delete" alt="file" (click)="deleteFile(i)">Eliminar</span>
+      <span class="delete btn btn-warning" alt="file" (click)="deleteFile(i)">Eliminar</span>
+    </div>
+    <div class="single-file" *ngFor="let f of moduleFiles; let m = index">
+      <div class="info">
+        <h4 class="name">
+          {{ f.name }}
+        </h4>
+        <p class="size">
+          {{ formatBytes(f.bytes) }}
+        </p>
+      </div>
+      <span class="delete btn btn-danger" alt="file" (click)="deleteModuleFile(m)">Eliminar</span>
     </div>
 </div>
