--- a/aclap/src/app/components/module-shared/create-module/create-module.component.html
+++ b/aclap/src/app/components/module-shared/create-module/create-module.component.html
@@ -17,6 +17,11 @@
         <div class="col-12 col-md-7">
             <!-- LEFT ROW  -->
             <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-xl-10">
+                        <app-edit-files [files]="files" ></app-edit-files>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col">
                         <app-edit-questions [questions]="questions" ></app-edit-questions>
@@ -57,7 +62,9 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]="moduleImage" [bannerImage]="bannerImage"></app-edit-module-info>
+                    <div class="col-12">
+                        <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]="moduleImage" [bannerImage]="bannerImage"></app-edit-module-info>
+                    </div>
                 </div>
             </div>
         </div>
