--- a/aclap/src/app/components/module-shared/edit/edit-module-info/edit-module-info.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-module-info/edit-module-info.component.html
@@ -17,16 +17,16 @@
             </select>
         </div>
     </div>
-    <div class="row d-flex align-items-center mb-3">
+    <div class="row d-flex align-items-center mb-3 card">
         <div class="form-group col-9">
-            <label class="label" for="name">Color del Módulo</label>
+            <label class="label" for="name">Color disponibles</label>
             <div class="row">
                 <div (click)="setColor(i)" *ngFor="let color of colors; index as i" class="col color-option" style="height: 30px; width: 30px;" [style.background-color]="color">
                 </div>
             </div>
         </div>
         <div class="col-3">
-            <label class="label">Color seleccionado</label>
+            <label class="label">Color actual</label>
             <div class="color-picked" style="width: 100%; height: 100px;" [style.background-color]="module.color">
             </div>
         </div>
