--- a/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-10">
-                        <app-edit-files [files]="files" ></app-edit-files>
+                        <app-edit-files [files]="files" [moduleFiles]="moduleFiles" [deletedModuleFiles]="deletedModuleFiles"></app-edit-files>
                     </div>
                 </div>
                 <div class="row justify-content-center">
